--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-    <h1 style="color:rebeccapurple">Tracy's Portfolio</h1>
+    <h1 style="color:rebeccapurple">Tracy's Portfolio-in-Progress</h1>
     <img src="tracyknitting.jpg"/>
 </html>
