add styles.css, begin total redesign

--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tracy Breen</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="div1">
+    <h1>Tracy Breen</h1>
+    <h2>Full-Stack Web Developer</h2>
+    </div>
+</body>
+</html>
+
+
+
+
+<!--
 <html>
     <h1 style="color:rebeccapurple">Tracy's Portfolio-in-Progress</h1>
     <img src="tracyknitting.jpg"/>
 </html>
+-->
