--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Tracy Breen | Web Developer</title>
 </head>
 <body>
-  <!-- NAvbar -->
+  <!-- Navbar -->
   <div class="navbar"> <!-- will hold logo (h1) and menu)-->
     <div class="container flex"> <!-- we wrap in a container so that on large screens the logo will stop growing along with it at a certain point--> <!-- the "utility class" of flex makes everything inside this container flexbox items-->
       <h1 class="logo">Tracy Breen | Portfolio</h1>
