added footer to all pages

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   <section class="cloud bg-primary my-2 py-2">
     <div class="container grid"> 
       <div class="text-center">
-        <h2 class="lg">Extreme Cloud Hosting</h2> <!-- making sizing classes (in this case, large) -->
-        <p class="lead my-1">Cloud hosting like you've never seen. Fast, efficient, and scalable.</p>
+        <h2 class="lg">super awesome full stackiness</h2> <!-- making sizing classes (in this case, large) -->
+        <p class="lead my-1">ermahgerd mah stack is full AF</p>
         <a href="projects.html" class="btn btn-dark">Projects</a>
       </div>
       <img src=images/cloud.png alt=""> <!-- we have a container with a grid , so the div is the first item on the grid and the image is the second item-->
@@ -138,7 +138,7 @@
   <footer class="bg-dark py-5">
     <div class="container grid grid-3">
       <div>
-        <h1>iamtracybreen
+        <h1>Tracy Breen
         </h1>
         <p>Copyright &copy; 2021</p>
       </div>
