--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,30 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark py-5">
+      <div class="container grid grid-3">
+        <div>
+          <h1>Tracy Breen
+          </h1>
+          <p>Copyright &copy; 2021</p>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="history.html">History</a></li>
+            <li><a href="projects.html">Projects</a></li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href="#"><i class="fab fa-github fa-2x"></i></a>
+          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        </div>
+      </div>
+    </footer>
   <!-- end tracy added -->
 
 </body>
