updates index.html, adds YT video (no style), +img

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <section class="showcase">
     <div class="container grid"><!-- this adds BOTH classes and even if we have different areas with grids we could specifically edit the showcase grid for example -->
       <div class="showcase-text">
-        <h1>can has fancy web design?</h1>
-        <p>all the fancies. also cats. lots of cool stuff you haven't even thought about yet, but will find you need desperately at some inopportune moment. many other things. things galore. perhaps a wobble wedge or even a discarded left sock. it's here, if you only care to look!</p>
-        <a href="history.html" class="btn btn-outline">History</a>
+        <h1>Developer-in-Training</h1>
+        <p>Currently a student in the MIT Full Stack Web Developer Certificate Program, I'm a highly adaptable, customer service-oriented team-player with heaps of determination and a strong drive.</p>
+        <a href="history.html" class="btn btn-outline">Bio</a>
       </div>
       <div class="showcase-form card">
         <h2>Request a Demo</h2>
