--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container grid"><!-- this adds BOTH classes and even if we have different areas with grids we could specifically edit the showcase grid for example -->
       <div class="showcase-text">
         <h1>Developer-in-Training</h1>
-        <p>Currently a student in the MIT Full Stack Web Developer Certificate Program, I'm a highly adaptable, customer service-oriented team-player with heaps of determination and a strong drive.</p>
+        <p>Currently a student in the MIT Full Stack Web Developer Certificate Program, I'm a highly adaptable, customer service-oriented team-player with heaps of determination, an innate love of learning, and a strong drive to succeed.</p>
         <a href="history.html" class="btn btn-outline">Bio</a>
       </div>
       <div class="showcase-form card">
