lots of changes, added photo & roomba story

--- a/history.html
+++ b/history.html
@@ -17,14 +17,36 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="history.html">History</a></li>
-          <li><a href="projects.html">Projects</a></li> <!-- better make yourself a projeccts.html page now! -->
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="wombat.html">Procrastination</a></li>
         </ul>
       </nav>
     </div>
   </div>
-  <div>
+  <div class="container flex">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/taFVJlBPass" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+
+  <!-- Cloud -->
+  <section class="cloud bg-primary my-2 py-2">
+    <div class="container grid"> 
+      <div class="text-center">
+        <h2 class="lg">My Story</h2>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+        <p class="sm my-1">bio text</p>
+      </div>
+<!--      <img src=images/cloud.png alt="">--> <!-- we have a container with a grid , so the div is the first item on the grid and the image is the second item-->
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="bg-dark py-5">
     <div class="container grid grid-3">
@@ -37,7 +59,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="history.html">History</a></li>
-            li><a href="projects.html">Projects</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="wombat.html">Procrastination</a></li>
         </ul>
       </nav>
       <div class="social">
