--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="history.html">History</a></li>
-          <li><a href="projects.html">Projects</a></li> <!-- better make yourself a projeccts.html page now! -->
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="wombat.html">Procrastination</a></li>
         </ul>
       </nav>
     </div>
@@ -31,6 +32,10 @@
         <p>Currently a student in the MIT Full Stack Web Developer Certificate Program, I'm a highly adaptable, customer service-oriented team-player with heaps of determination, an innate love of learning, and a strong drive to succeed.</p>
         <a href="history.html" class="btn btn-outline">Bio</a>
       </div>
+      <div class="showcase-pic">
+        <img class="radiusten" src="random-images/tracy-bio-photo4x3.jpg" alt="">
+      </div>
+<!--
       <div class="showcase-form card">
         <h2>Request a Demo</h2>
         <form>
@@ -46,6 +51,7 @@
           <input type="submit" class="btn btn-primary">
         </form>
       </div>
+    -->
     </div> 
   </section>
 
@@ -53,34 +59,33 @@
   <section class="stats">
     <div class="container">
       <h3 class="stats-heading text-center my-1">
-        hey so just FYI we have a few classes here -- stats-heading, text-center, and my-1 (which is of course the margin for the y axis duh)
+        Creativity test: can you tell a compelling story based only on three commonly used icons, and fit it into this div?
       </h3>
 
       <div class="grid grid-3 text-center my-4">
         <div>
           <i class="fas fa-server fa-3x"></i> <!-- these are font awesome classes inside an icon tag -->
-          <h3>big number</h3>
-          <p class="text-secondary">Deployments</p>
+          <h3>what do you see?</h3>
+          <p class="text-secondary">I see a lonely Roomba peering into its reflection in a puddle.</p>
         </div>
         <div>
           <i class="fas fa-upload fa-3x"></i>
-          <h3>terabytes</h3>
-          <p class="text-secondary">Published</p>
+          <h3>and now?</h3>
+          <p class="text-secondary">Machine tummies don't like puddles. Roomba had to vom.</p>
         </div>
         <div>
           <i class="fas fa-project-diagram fa-3x"></i>
-          <h3>also big #</h3>
-          <p class="text-secondary">Projects</p>
+          <h3>what next?</h3>
+          <p class="text-secondary">The right-bottom part of the fence is gone! Roomba has escaped!</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Cli --> <!-- this stands for Command Line Interface -->
+  <!-- Cli --><!--
   <section class="cli">
-    <div class="container grid"> <!-- using grid instead of flexbox so that we can have something span multiple columns and/or rows -->
+    <div class="container grid">
       <img src="random-images/cat-transparent.png" alt="">
-      <!--<img src="images/cli.png" alt=""> --><!-- later when you're wondering why the background color won't change, please note to self it's because that whole thing is an IMAGE, you muppet, so you're not going to suddenly be able to change the background color inside of an ALREADY COMPLETE IMAGE you goose. Next time don't spend 20mins trying to fix this. SHAME!-->
       <div class="card">
         <h3>Easy to use, cross-platform CLI</h3>
       </div>
@@ -89,7 +94,7 @@
       </div>
     </div>
   </section>
-
+-->
   <!-- Cloud -->
   <section class="cloud bg-primary my-2 py-2">
     <div class="container grid"> 
@@ -147,6 +152,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="history.html">History</a></li>
           <li><a href="projects.html">Projects</a></li>
+          <li><a href="wombat.html">Procrastination</a></li>
         </ul>
       </nav>
       <div class="social">
