--- a/wombat.html
+++ b/wombat.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tracy Breen | Projects</title>
+  <title>Document</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- this is for the font aawesome fonts-->
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
   <!-- NAvbar -->
   <div class="navbar"> <!-- will hold logo (h1) and menu)-->
     <div class="container flex"> <!-- we wrap in a container so that on large screens the logo will stop growing along with it at a certain point--> <!-- the "utility class" of flex makes everything inside this container flexbox items-->
-      <h1 class="logo">Tracy Breen | Projects</h1>
+      <h1 class="logo">Tracy Breen | Procrastination</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -23,27 +23,27 @@
       </nav>
     </div>
   </div>
-
+  
   <!-- tracy added this -->
     <!-- Projects-->
     <section class="projects">
       <div class="container grid"> <!-- using grid instead of flexbox so that we can have something span multiple columns and/or rows -->
-        <img src="random-images/broken-links-drawing.jpg" alt="">
+        <img src="random-images/wombat.png" alt="hello i am procrastination wombat. monch monch.">
         <div class="card">
-          <h3>filler</h3>
+          <h3>you guys, it's literally a baby wombat. surely this alone is worth the price of admission.
+          </h3>
         </div>
         <div class="card">
-          <h3>filler</h3>
+          <h3>that baby wombat is just noshing away on some grass. he doesn't have a portfolio project due in a few hours. he's happy and pure.</h3>
         </div>
       </div>
     </section>
-
-    <!-- Footer -->
+  
+  <!-- Footer -->
     <footer class="bg-dark py-5">
       <div class="container grid grid-3">
         <div>
-          <h1>Tracy Breen
-          </h1>
+          <h1>Tracy Breen</h1>
           <p>Copyright &copy; 2021</p>
         </div>
         <nav>
@@ -52,7 +52,8 @@
             <li><a href="history.html">History</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="wombat.html">Procrastination</a></li>
-          </ul>
+          </ul>          
+        </nav>
         </nav>
         <div class="social">
           <a href="#"><i class="fab fa-github fa-2x"></i></a>
@@ -62,7 +63,6 @@
         </div>
       </div>
     </footer>
-  <!-- end tracy added -->
-
+    <!-- end tracy added -->
 </body>
 </html>
