--- a/projects.html
+++ b/projects.html
@@ -30,10 +30,10 @@
       <div class="container grid"> <!-- using grid instead of flexbox so that we can have something span multiple columns and/or rows -->
         <img src="random-images/broken-links-drawing.jpg" alt="">
         <div class="card">
-          <h3>filler</h3>
+          <h3>oh no i hate goblins</h3>
         </div>
         <div class="card">
-          <h3>filler</h3>
+          <h3>goblins are the actual worst though</h3>
         </div>
       </div>
     </section>
