rounds edges of goblin

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
           <h3>oh no i hate goblins</h3>
         </div>
         <div class="card">
-          <h3>goblins are the actual worst though</h3>
+          <h3>goblins are the actual worst</h3>
         </div>
       </div>
     </section>
