--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container grid"><!-- this adds BOTH classes and even if we have different areas with grids we could specifically edit the showcase grid for example -->
       <div class="showcase-text">
         <h1>Developer-in-Training</h1>
-        <p>Currently a student in the MIT Full Stack Web Developer Certificate Program, I'm a highly adaptable, customer service-oriented team-player with heaps of determination, an innate love of learning, and a strong drive to succeed.</p>
+        <p>Currently a student in MIT's Full Stack Web Developer Certificate Program, I'm a highly adaptable, customer service-oriented team-player with heaps of determination, an innate love of learning, and a strong drive to succeed.</p>
         <a href="history.html" class="btn btn-outline">Bio</a>
       </div>
       <div class="showcase-pic">
@@ -140,7 +140,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-dark py-5">
+  <footer class="footer bg-dark py-5">
     <div class="container grid grid-3">
       <div>
         <h1>Tracy Breen
@@ -156,7 +156,7 @@
         </ul>
       </nav>
       <div class="social">
-        <a href="#"><i class="fab fa-github fa-2x"></i></a>
+        <a href="#"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
         <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
         <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
         <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
