adds animation, docs.html, features.hmtl

--- a/docs.html
+++ b/docs.html
@@ -25,55 +25,63 @@
   </div>
 
   <!-- Head -->
-  <section class="features-head bg-primary py-3">
+  <section class="docs-head bg-primary py-3">
     <div class="container grid">
       <div>
-        <h1 class="xl">Features</h1>
-        <p class="lead">This is an imaginary page about features. The purpose of creating it is to see what else we might learn.</p>
+        <h1 class="xl">Docs</h1>
+        <p class="lead">Learn how to do the things with the thing.</p>
       </div>
-      <img src="images/server.png">
+      <img src="images/docs.png">
     </div>
   </section>
 
-  <!-- Sub Head -->
-  <section class="features-sub-head bg-light py-3">
-    <div class="container grid">
-      <div>
-        <h1 class="md">Another Fake Thingie</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse culpa alias ut ullam deleniti, possimus aspernatur est dolore magnam facilis accusamus similique neque veniam molestiae quasi. Amet molestiae quo inventore?</p>
-      </div>
-      <img src="images/server2.png">
+  <!-- Docs Main -->
+<section class="docs-main my-4">
+  <div class="container grid">
+    <div class="card bg-light p-3">
+      <h3 class="my-2">Essentials</h3>
+      <nav>
+        <ul>
+          <li><a class="text-primary" href="#">Introduction</a></li>
+          <li><a href="#">About Loruki</a></li>
+          <li><a href="#">Installation</a></li>
+        </ul>
+      </nav>
+      <h3 class="my-2">Deployment</h3>
+      <nav>
+        <ul>
+          <li><a href="#">Setting up a Container</a></li>
+          <li><a href="#">Using the CLI</a></li>
+          <li><a href="#">Managing Resources</a></li>
+          <li><a href="#">Upgrade & Downgrade</a></li>
+        </ul>
+      </nav>
     </div>
-  </section>
+    <div class="card">
+      <h2>Introduction</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam dolorum laboriosam, quasi voluptas excepturi ut aut inventore, quam molestiae fugiat voluptatum maxime perferendis, velit nihil sunt hic quisquam animi et.</p>
+      <div class="alert alert-success">
+        <i class="fas fa-info"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, obcaecati.
+      </div>
+      <h3>Lorem, ipsum dolor.</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex quaerat aperiam rem labore id architecto perferendis provident debitis fugiat ipsa!</p>
+      <a href="#" class="btn btn-primary">Install CLI</a>
+      <h3>Requirements</h3>
+      <ul>
+        <li>Windows 10, Mac OSX, Linux</li>
+        <li>Node.js v12 or Higher</li>
+      </ul>
 
-  <section class="features-main my-2">
-    <div class="container grid grid-3">
-      <div class="card flex">
-        <i class="fas fa-server fa-3x"></i>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum et, eius aliquim, labore!</p>
-      </div>
-      <div class="card flex">
-        <i class="fas fa-server fa-3x"></i>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum et, eius.</p>
-      </div>
-      <div class="card flex">
-        <i class="fas fa-server fa-3x"></i>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum et, eius aliquid molestiae quibusdam nulla praesentium quis totam, accusantium autem!</p>
-      </div>
-      <div class="card flex">
-        <i class="fas fa-server fa-3x"></i>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum et, eius aliquid molestiae quibusdam nulla praesentium.</p>
-      </div>
-      <div class="card flex">
-        <i class="fas fa-server fa-3x"></i>
-        <p>Lorem ipsum dolor sit amet cons dolorem dolor fugit provident labore.</p>
-      </div>
-      <div class="card flex">
-        <i class="fas fa-server fa-3x"></i>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum et, praesentium quis totam, accusantium autem repudiandae.</p>
-      </div>
+      <h3>Install</h3>
+      <p>Mac (Homebrew)</p>
+      <pre><code>$ brew install loruki-cli</code></pre>
+      <p>NPM</p>
+      <pre><code>$ npm install loruki-cli</code></pre>
+      <p>Yarn</p>
+      <pre><code>$ yarn install loruki-cli</code></pre>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer class="footer bg-dark py-5">
