--- a/wombat.html
+++ b/wombat.html
@@ -40,29 +40,28 @@
     </section>
   
   <!-- Footer -->
-    <footer class="bg-dark py-5">
-      <div class="container grid grid-3">
-        <div>
-          <h1>Tracy Breen</h1>
-          <p>Copyright &copy; 2021</p>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="history.html">History</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="wombat.html">Procrastination</a></li>
-          </ul>          
-        </nav>
-        </nav>
-        <div class="social">
-          <a href="#"><i class="fab fa-github fa-2x"></i></a>
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-        </div>
+  <footer class="footer bg-dark py-5">
+    <div class="container grid grid-3">
+      <div>
+        <h1>Tracy Breen
+        </h1>
+        <p>Copyright &copy; 2021</p>
       </div>
-    </footer>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="history.html">History</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="wombat.html">Procrastination</a></li>
+        </ul>
+      </nav>
+      <div class="social">
+        <a href="https://github.com/tracybreen"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
+        <a href="https://www.linkedin.com/in/tracy-breen/"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://twitter.com/iamtracybreen"><i class="fab fa-twitter fa-2x"></i></a>
+      </div>
+    </div>
+  </footer>
     <!-- end tracy added -->
 </body>
 </html>
