--- a/history.html
+++ b/history.html
@@ -12,7 +12,7 @@
   <!-- NAvbar -->
   <div class="navbar"> <!-- will hold logo (h1) and menu)-->
     <div class="container flex"> <!-- we wrap in a container so that on large screens the logo will stop growing along with it at a certain point--> <!-- the "utility class" of flex makes everything inside this container flexbox items-->
-      <h1 class="logo">Tracy Breen | History</h1>
+      <h1 class="logo">Tracy Breen</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -23,31 +23,39 @@
       </nav>
     </div>
   </div>
-  <div class="container flex">
+<section class="video">
+<div class="container flex">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/taFVJlBPass" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+</section>
 
-  <!-- Cloud -->
-  <section class="cloud bg-primary my-2 py-2">
-    <div class="container grid"> 
-      <div class="text-center">
-        <h2 class="lg">My Story</h2>
-        <p class="sm my-1">I always thought that if money were no object, I’d be a student forever. I genuinely thrive on the whole educational experience. I love amassing knowledge. I adore the discussion. And I know that when I’m not at least a little bit uncomfortable, I’m not growing. So when I realized I had been too comfortable for too long, I decided to do something about it. I took a little bit of a wild leap this past summer and enrolled in MIT’s Full Stack Certification course.</p>
-        <p class="sm my-1">Over the past two decades, I have primarily worked in the retail and hospitality industries. I’ve thrived in environments ranging from loud pubs, dive bars, and underground dueling piano venues to award-winning private clubs and upscale restaurants. I know a whole lot about customer service, teamwork, and patience.</p>
-        <p class="sm my-1">As GM for one of Best Collateral’s highest-ranking pawnbroker locations in the SF Bay Area, I expanded our loan portfolio to over a million dollars in my first 6 months, which resulted in an increase in pay for not just management, but all of the staff in my store. I’m also a certified AJP, and was responsible for valuing all high-ticket items presented as collateral at my store.</p>
-        <p class="sm my-1">More recently, I worked in banquets and a la carte food service at the Union League of Philadelphia, which was rated the Number One City Club in the Country 5 consecutive times, twice during my tenure. For the past four+ years, I’ve been part of the service team at one of Philadelphia’s consistently highest-ranking restaurants, Talula’s Garden.</p>
-        <p class="sm my-1">Alas, in the hospitality industry, unless your dream is to open a restaurant of your own, you can eventually run out of paths for growth. And when you’re the best one at your job, it’s time to get uncomfortable. Time to be a n00b!</p>
-        <p class="sm my-1">So I turned to the tech world, which has always held a strong appeal for me. My father, with whom I was very close, was in IT. He taught me to use the command line on a Commodore 64 as soon as I was old enough to read, introduced me to the internet long before the average family was bothering with it, and instilled in me a great curiosity about anything to do with computers. So even though this is a sharp pivot for me professionally, in a way it just feels like coming home.</p>
-        <p class="sm my-1">Something very cool happened when I enrolled in this course. I discovered there are no limits when it comes to how much I can learn, and nothing could be more exciting than that! I’m delighted to be heading in a direction where no matter how much time I spend gaining expertise, there’s always another level to conquer, another language to master.  Even if it were possible to learn everything about programming and web development as it is today, I’d already be behind by tomorrow. This is, quite literally, a rapidly expanding universe.</p>
-        <p class="sm my-1">My professional life thus far has prepared me to be exceptionally adaptable, to respond swiftly and tactfully to client concerns, and to work comfortably in all sorts of team settings. My professional life going forward… well, that’s a narrative journey upon which I’m very excited to embark.</p>
-        <p class="sm my-1">For examples of my work so far, please visit the projects page or click my GitHub link. And stay tuned, because I’m hungry to tackle bigger and more challenging projects as my knowledge base grows broader and stronger.</p>
-      </div>
-<!--      <img src=images/cloud.png alt="">--> <!-- we have a container with a grid , so the div is the first item on the grid and the image is the second item-->
-    </div>
-  </section>
+<section class="history">
+  <h2 class="lg text-center">History</h2>
+  <div class="container grid">
+    <p>I always thought that if money were no object, I’d be a student forever. I genuinely thrive on the whole educational experience. I love amassing knowledge. I adore the discussion. And I know that when I’m not at least a little bit uncomfortable, I’m not growing. So when I realized I had been too comfortable for too long, I decided to do something about it. I took a little bit of a wild leap this past summer and enrolled in MIT’s Full Stack Certification course.</p>
+    <i class="fa-solid fa-book-open-reader fa-3x"></i>
+    <i class="fa-solid fa-bell-concierge fa-3x"></i>
+    <p>Over the past two decades, I have primarily worked in the retail and hospitality industries. I’ve thrived in environments ranging from loud pubs, dive bars, and underground dueling piano venues to award-winning private clubs and upscale restaurants. I know a whole lot about customer service, teamwork, and patience.</p>
+    <p>As GM for one of Best Collateral’s highest-ranking pawnbroker locations in the SF Bay Area, I expanded our loan portfolio to over a million dollars in my first 6 months, which resulted in an increase in pay for not just management, but all of the staff in my store. I’m also a certified AJP, and was responsible for valuing all high-ticket items presented as collateral at my store.</p>
+    <i class="fa-solid fa-gem fa-3x"></i>
+    <i class="fa-solid fa-martini-glass-citrus fa-3x"></i>
+    <p>More recently, I worked in banquets and a la carte food service at the Union League of Philadelphia, which was rated the Number One City Club in the Country 5 consecutive times, twice during my tenure. For the past four+ years, I’ve been part of the service team at one of Philadelphia’s consistently highest-ranking restaurants, Talula’s Garden.</p>
+    <p>Alas, in the hospitality industry, unless your dream is to open a restaurant of your own, you can eventually run out of paths for growth. And when you’re the best one at your job, it’s time to get uncomfortable. Time to be a n00b!</p>
+    <i class="fa-solid fa-battery-quarter fa-3x"></i>
+    <i class="fa-solid fa-floppy-disk fa-3x"></i>
+    <p>So I turned to the tech world, which has always held a strong appeal for me. My father, with whom I was very close, was in IT. He taught me to use the command line on a Commodore 64 as soon as I was old enough to read, introduced me to the internet long before the average family was bothering with it, and instilled in me a great curiosity about anything to do with computers. So even though this is a sharp pivot for me professionally, in a way it just feels like coming home.</p>
+    <p>Something very cool happened when I enrolled in this course. I discovered there are no limits when it comes to how much I can learn, and nothing could be more exciting than that! I’m delighted to be heading in a direction where no matter how much time I spend gaining expertise, there’s always another level to conquer, another language to master.  Even if it were possible to learn everything about programming and web development as it is today, I’d already be behind by tomorrow. This is, quite literally, a rapidly expanding universe.</p>
+    <i class="fa-solid fa-rocket fa-3x"></i>
+    <i class="fa-solid fa-person-hiking fa-3x"></i>
+    <p>My professional life thus far has prepared me to be exceptionally adaptable, to respond swiftly and tactfully to client concerns, and to work comfortably in all sorts of team settings. My professional life going forward… well, that’s a narrative journey upon which I’m very excited to embark.</p>
+    <p>For examples of my work so far, please visit the projects page or click my GitHub link. And stay tuned, because I’m hungry to tackle bigger and more challenging projects as my knowledge base grows broader and stronger.</p>
+    <i class="fa-solid fa-chart-line fa-3x"></i><br>
+  </div>
+</section>
+
 
   <!-- Footer -->
-  <footer class="bg-dark py-5">
+  <footer class="footer bg-dark py-5">
     <div class="container grid grid-3">
       <div>
         <h1>Tracy Breen
@@ -63,10 +71,9 @@
         </ul>
       </nav>
       <div class="social">
-        <a href="#"><i class="fab fa-github fa-2x"></i></a>
-        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://github.com/tracybreen"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
+        <a href="https://www.linkedin.com/in/tracy-breen/"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://twitter.com/iamtracybreen"><i class="fab fa-twitter fa-2x"></i></a>
       </div>
     </div>
   </footer>
