--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark py-5">
+    <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
         <div>
           <h1>Tracy Breen
@@ -55,10 +55,9 @@
           </ul>
         </nav>
         <div class="social">
-          <a href="#"><i class="fab fa-github fa-2x"></i></a>
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="https://github.com/tracybreen"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
+          <a href="https://www.linkedin.com/in/tracy-breen/"><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href="https://twitter.com/iamtracybreen"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
       </div>
     </footer>
