changes main photo, adds spooky eyes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="history.html" class="btn btn-outline">Bio</a>
       </div>
       <div class="showcase-pic">
-        <img class="radiusten" src="random-images/tracy-bio-photo-new-square.jpg" alt="">
+        <img class="radiusten" src="random-images/tracy-biopic-square.jpg" alt="">
       </div>
 <!--
       <div class="showcase-form card">
@@ -120,8 +120,8 @@
         <img src="images/logos/node.png" alt="">
       </div>
       <div class="card">
-        <h4>C#</h4>
-        <img src="images/logos/csharp.png" alt="">
+        <h4>React</h4>
+        <img src="random-images/react2.png" alt="">
       </div>
       <div class="card">
         <h4>Ruby</h4>
