--- a/projects.html
+++ b/projects.html
@@ -28,13 +28,7 @@
     <!-- Projects-->
     <section class="projects">
       <div class="container grid"> <!-- using grid instead of flexbox so that we can have something span multiple columns and/or rows -->
-        <img src="random-images/broken-links-drawing.jpg" alt="">
-        <div class="card">
-          <h3>oh no i hate goblins</h3>
-        </div>
-        <div class="card">
-          <h3>goblins are the actual worst</h3>
-        </div>
+        <div style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621151891?h=9b27d48bc4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="New Recording - 10/2/2021, 8:37:03 PM"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </div>
     </section>
 
