new tab for socials, adds bus tracker video

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
         </ul>
       </nav>
       <div class="social">
-        <a href="https://github.com/tracybreen"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
-        <a href="https://www.linkedin.com/in/tracy-breen/"><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href="https://twitter.com/iamtracybreen"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="https://github.com/tracybreen" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
+        <a href="https://www.linkedin.com/in/tracy-breen/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://twitter.com/iamtracybreen" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
       </div>
     </div>
   </footer>
