--- a/projects.html
+++ b/projects.html
@@ -35,10 +35,12 @@
       </div>
     </div>
 
-      <div class="class project-title">
+      <div class="project">
         <h1>Bus Tracker</h1>
         <p>stuff about the bus tracker</p>
+        <div style="padding:49.58% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621216213?h=d154731eac&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Bus Tracker"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </div>
+
     </section>
 
     <!-- Footer -->
@@ -58,9 +60,9 @@
           </ul>
         </nav>
         <div class="social">
-          <a href="https://github.com/tracybreen"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
-          <a href="https://www.linkedin.com/in/tracy-breen/"><i class="fab fa-linkedin fa-2x"></i></a>
-          <a href="https://twitter.com/iamtracybreen"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="https://github.com/tracybreen" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a> <!-- fab is for social media icons in font awesome (instead of fas) -->
+          <a href="https://www.linkedin.com/in/tracy-breen/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href="https://twitter.com/iamtracybreen" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
       </div>
     </footer>
